--- a/socials.html
+++ b/socials.html
@@ -49,17 +49,17 @@
                             <span><a class="link profileLink" href="profile.html" data-text="Profile">Profile</a></span>
                         </li>
                         <li>
-                            <span><a class="link discographyLink" href="discography.html" data-text="Discography">Discography</a></span>
-                            <span class="discography-project-preview-wrapper">
-                                <div class="discography-project-preview"></div>
+                            <span><a class="link membersLink animate-this" href="members.html" data-text="Members">Members</a></span>
+                            <span class="members-project-preview-wrapper">
+                                <div class="members-project-preview"></div>
                             </span>
                         </li>
-                        <li>
+                        <!-- <li>
                             <span class="members-project-preview-wrapper">
                                 <div class="members-project-preview"></div>
                             </span>
                             <span><a class="link membersLink" href="members.html" data-text="Members">Members</a></span>
-                        </li>
+                        </li> -->
                     </ul>
                     <div class="credits"><span><a href="credits.html">Credits</a></span><span><a href="socials.html">Socials</a></span></div>
                 </div>
