moved membersCarousel to members.js

--- a/members.html
+++ b/members.html
@@ -41,17 +41,17 @@
                             <span><a class="link profileLink animate-this" href="profile.html" data-text="Profile">Profile</a></span>
                         </li>
                         <li>
-                            <span><a class="link discographyLink animate-this" href="discography.html" data-text="Discography">Discography</a></span>
-                            <span class="discography-project-preview-wrapper">
-                                <div class="discography-project-preview"></div>
-                            </span>
+                            <span><a class="link membersLink animate-this" href="members.html" data-text="Members">Members</a></span>
+                            <span class="members-project-preview-wrapper">
+                                <div class="members-project-preview"></div>
+                            </span> 
                         </li>
-                        <li>
+                        <!-- <li>
                             <span class="members-project-preview-wrapper">
                                 <div class="members-project-preview"></div>
                             </span>
                             <span><a class="link membersLink animate-this" href="members.html" data-text="Members">Members</a></span>
-                        </li>
+                        </li> -->
                     </ul>
                     <div class="credits"><span><a href="credits.html">Credits</a></span><span><a href="socials.html">Socials</a></span></div>
                 </div>
@@ -68,17 +68,7 @@
 
     <div class="theDiv">
         <div class="close"></div>
-        <div class="membersCarousel">
-            <p class="membersCarousel__paragraph"> 
-                <img class="membersCarousel__paragraph__image"  src="images/members/scoups_attacca_op1.jpg" alt="">
-                <img class="membersCarousel__paragraph__image"  src="images/members/jun_attacca_op1.jpg" alt="">
-                <img class="membersCarousel__paragraph__image"  src="images/members/mingyu_attacca_op1.jpg" alt="">
-                <img class="membersCarousel__paragraph__image"  src="images/members/jeonghan_attacca_op1.jpg" alt="">
-                <img class="membersCarousel__paragraph__image"  src="images/members/dk_attacca_op1.jpg" alt="">
-            </p>
-            <!-- <p class="member_name">S.coups</p> -->
-            <p class="member_name">es &#183 coups</p>
-        </div>
+        
         
     </div>
 
@@ -117,6 +107,7 @@
     <!-- END OF BARBA.JS -->
 
     <script src="/javascript/data/members_data.js"></script>
+    <script src="/javascript/data/eachMembersData.js"></script>
     <script type="module" src="app.js"></script>
     <script src="/javascript/navbar.js"></script>
     <script src="/javascript/footer.js"></script>
