Added discography section

--- a/profile.html
+++ b/profile.html
@@ -106,6 +106,7 @@
             <div class="mainProfile__paragraph__colorsDiv__theColors"> <p class="roseQuartz">Rose Quartz</p> <p class="serenity">Serenity</p></div>
             
         </div>
+        <h4 style="text-align: right;">Members</h4>
         <div class="mainProfile__paragraph__members">
             <img class="mainProfile__paragraph__members__image"  src="images/attacca_group_photo_3.jpg" alt="">
 
@@ -148,8 +149,34 @@
                 <feDisplacementMap in="SourceGraphic" in2="NOISE" scale="20"></feDisplacementMap>
             </filter>
         </svg>
+
+        <div class="mainProfile__paragraph__discography">
+            <p class="mainProfile__paragraph__discography__title">Discography</p>
+            <div class="mainProfile__paragraph__discography__list">
+                <div class="mainProfile__paragraph__discography__list__minis">
+                    <p class="mainProfile__paragraph__discography__list__number">09</p>
+                    <p class="mainProfile__paragraph__discography__list__title">mini-albums</p>
+                </div>
+                <div class="mainProfile__paragraph__discography__list__full">
+                    <p  class="mainProfile__paragraph__discography__list__number">04</p>
+                    <p class="mainProfile__paragraph__discography__list__title">full albums</p>
+                </div>
+                <div class="mainProfile__paragraph__discography__list__singles">
+                    <p  class="mainProfile__paragraph__discography__list__number">03</p>
+                    <p class="mainProfile__paragraph__discography__list__title">singles</p>
+                </div>
+                <div class="mainProfile__paragraph__discography__list__specials">
+                    <p  class="mainProfile__paragraph__discography__list__number">02</p>
+                    <p class="mainProfile__paragraph__discography__list__title">Special Albums</p>
+                </div>
+                <div class="mainProfile__paragraph__discography__list__japanese">
+                    <p  class="mainProfile__paragraph__discography__list__number">05</p>
+                    <p class="mainProfile__paragraph__discography__list__title">Japanese Releases</p>
+                </div>
+            </div>
+        </div>
         
-        <h4 style="text-align: right;">Filmography</h4> 
+        <p style="text-align: right;font-size: 1em;">Filmography</p> 
         <div class="mainProfile__paragraph__filmRelated">
             <div class="mainProfile__paragraph__filmRelated__filmography">
                 <!-- <h4>Filmography</h4>  -->
@@ -169,7 +196,7 @@
                 <div class="mainProfile__paragraph__filmRelated__filmsInFilmography__onlineshows">
                     <!-- <h4>More Contents</h4>  -->
                     <!-- <p>IF, Snapshoot, Dawn is hotter than day</p> -->
-                    <div class="mainProfile__paragraph__filmRelated__filmsInFilmography__onlineshows_div">
+                    <div class="mainProfile__paragraph__filmRelated__onlineshows_div">
                         <p style="margin-bottom: .6em;font-size: 1.2em;">IF Seventeen</p>
                         <p style="margin-bottom: .6em;font-size: 1.2em;">Snapshoot</p>
                         <p style="margin-bottom: .6em;font-size: 1.2em;">Inside Seventeen</p>
@@ -178,7 +205,7 @@
                     </div>
                 </div>
                 <div class="mainProfile__paragraph__filmRelated__filmsInFilmography__film">
-                    <div>
+                    <div class="mainProfile__paragraph__filmRelated__onlineshows_div">
                         <p style="margin-bottom: .6em;font-size: 1.2em;">Seventeen Power of Love: The Movie</p>
                     </div>
                 </div>
