changed h2 tags to p tags

--- a/socials.html
+++ b/socials.html
@@ -73,12 +73,12 @@
     <main class="mainSocials">
         <div class="socialsBar">
             <div class="socialsBar__icons">
-                <h2><a class="socialsBar__icons__links link" href="https://cafe.daum.net/pledis-17" target="_blank">Fancafe <sup><i class="fa-solid fa-heart"></i></i></sup></a></h2>
-                <h2><a class="socialsBar__icons__links link" href="https://open.spotify.com/artist/7nqOGRxlXj7N2JYbgNEjYH" target="_blank">Spotify <sup><i class="fab fa-spotify"></i></i></sup></a></h2>
-                <h2><a class="socialsBar__icons__links link" href="https://twitter.com/pledis_17">Twitter <sup><i class="fa-brands fa-twitter"></i></sup></a></h2>
-                <h2><a class="socialsBar__icons__links link" href="https://www.facebook.com/seventeennews">Facebook <sup><i class="fa-brands fa-facebook-f"></i></sup></a></h2>
-                <h2><a class="socialsBar__icons__links link" href="https://www.youtube.com/user/pledis17">Youtube <sup><i class="fa-brands fa-youtube"></i></sup></a></h2>
-                <h2><a class="socialsBar__icons__links link" href="https://www.instagram.com/saythename_17">Instagram <sup><i class="fa-brands fa-instagram"></i></sup></a></h2>
+                <p><a class="socialsBar__icons__links link" href="https://cafe.daum.net/pledis-17" target="_blank">Fancafe <sup><i class="fa-solid fa-heart"></i></i></sup></a></p>
+                <p><a class="socialsBar__icons__links link" href="https://open.spotify.com/artist/7nqOGRxlXj7N2JYbgNEjYH" target="_blank">Spotify <sup><i class="fab fa-spotify"></i></i></sup></a></p>
+                <p><a class="socialsBar__icons__links link" href="https://twitter.com/pledis_17">Twitter <sup><i class="fa-brands fa-twitter"></i></sup></a></p>
+                <p><a class="socialsBar__icons__links link" href="https://www.facebook.com/seventeennews">Facebook <sup><i class="fa-brands fa-facebook-f"></i></sup></a></p>
+                <p><a class="socialsBar__icons__links link" href="https://www.youtube.com/user/pledis17">Youtube <sup><i class="fa-brands fa-youtube"></i></sup></a></p>
+                <p><a class="socialsBar__icons__links link" href="https://www.instagram.com/saythename_17">Instagram <sup><i class="fa-brands fa-instagram"></i></sup></a></p>
             </div>
         </div>
     </main>
