--- a/profile.html
+++ b/profile.html
@@ -256,11 +256,25 @@
         <!-- <script src="https://cdn.jsdelivr.net/npm/@barba/core"></script> -->
     <!-- END OF BARBA.JS -->
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js" integrity="sha512-dLxUelApnYxpLt6K2iomGngnHO83iUvZytA3YjDUCjT0HDOHKXnVYdf3hU4JjM8uEhxf9nD1/ey98U3t2vZ0qQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
+
+    <script src="dist/hover-effect.umd.js"></script>
+
     <script type="module" src="/app.js"></script>
     <script src="/javascript/navbar.js"></script>
     <script src="/javascript/footer.js"></script>
     <script src="/javascript/data/profile_members.js"></script>
     <script src="/javascript/pages/profile.js"></script>
     
+    <script>
+         new hoverEffect({
+            parent: document.querySelector('.mainProfile__paragraph__units__unit__hhu'),
+            intensity: 0.9,
+            image1: 'images/units/hhu_2.jpg',
+            image1: 'images/units/hhu_3.jpeg',
+            displacementImage: 'images/heightMap.png'
+        });
+    </script>
 </body>
 </html>
