changes to close class

--- a/members.html
+++ b/members.html
@@ -68,7 +68,7 @@
         <main class="mainMembers"></main>
 
         <div class="theDiv">
-            <div class="close"></div>
+            <div class="close">close</div>
         </div>
 
         <div class="scroll">Scroll</div>
