added argument to members()

--- a/members.html
+++ b/members.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Mate SC&display=swap" rel="stylesheet"> 
     <title>SEVENTEEN - MEMBERS</title>
 </head>
-<body data-barba="wrapper" onload="members()">
+<body data-barba="wrapper" onload="members(j)">
     <div class="load-container">
         <div class="loading-screen"></div>
     </div>
