removed extension from image

--- a/fake_members.html
+++ b/fake_members.html
@@ -114,7 +114,7 @@
                 
                 dets.innerHTML = `
                     <div class="mainMembers__dets__imageDiv">
-                        <img class="mainMembers__dets__imageDiv__image" src='images/members/${membersData[i].image}.jpg' />
+                        <img class="mainMembers__dets__imageDiv__image" src='images/members/${membersData[i].image}' />
                     </div>
                     <div class="mainMembers__dets__info">
                         <p class="mainMembers__dets__info__name">${membersData[i].stage_name}<span>${membersData[i].korean_stage_name}</span></p>
