--- a/main.html
+++ b/main.html
@@ -33,7 +33,18 @@
             <div class="navbar">
                 <div class="navbar__item">
                     <div class="colorModeDiv">
-                        <span id="colorMode">Fear The Sun <sup><i class="fa-solid fa-sun-bright"></i></sup></span>
+                        <span id="colorMode">
+                            <span class="state">Fear The Sun</span>
+                            <!-- <sup style=" width: 150px; height: 50px;"> -->
+                                <?xml version="1.0" encoding="utf-8"?>
+                                <!-- Generator: Adobe Illustrator 25.4.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                                <svg class="moon"  version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                    viewBox="0 0 640 480" style="enable-background:new 0 0 640 480;" xml:space="preserve">
+                                <path d="M306.72,162.03c-10.01,0-19.49,2.28-27.95,6.34c34.93,0.92,62.97,29.49,62.97,64.65c0,25.72-15.01,47.94-36.74,58.37
+                                    c0.58,0.02,1.15,0.04,1.73,0.04c35.73,0,64.7-28.97,64.7-64.7S342.45,162.03,306.72,162.03z"/>
+                                </svg>
+                            <!-- </sup> -->
+                        </span>
                     </div>
                     <ul class="navbar__ul">
                         <li>
